--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@chatkitty/core": "^1.8.0",
     "@notifee/react-native": "^5.3.0",
-    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@zegocloud/zego-uikit-prebuilt-call-rn": "^4.4.2",
-    "@zegocloud/zego-uikit-rn": "^2.6.0",
+    "@zegocloud/zego-uikit-rn": "^2.6.1",
     "expo": "~50.0.5",
     "expo-linear-gradient": "~12.7.1",
     "expo-status-bar": "~1.11.1",
@@ -24,12 +24,10 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-delegate-component": "^1.0.0",
-    "react-native": "0.73.2",
+    "react-native": "0.73.4",
     "react-native-draggable": "^3.3.0",
-    "react-native-gifted-chat": "^2.4.0",
     "react-native-keep-awake": "^4.0.0",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
     "react-native-sound": "^0.11.2",
     "react-native-svg": "14.1.0",
     "tailwindcss": "^3.3.2",
